correct spacing"

--- a/src/components/CaseStudyLink/style.scss
+++ b/src/components/CaseStudyLink/style.scss
@@ -2,7 +2,7 @@
 
 .case-study-link {
     max-width: 600px;
-    margin-bottom: 24px;
+    margin-bottom: 2rem;
 
     @media screen and (min-width: 600px) {
         width: calc(50% - 24px);
@@ -10,7 +10,8 @@
 }
 
 .case-study-link__image-link {
-    display: inline-block;
+    display: block;
+    margin-bottom: 1rem;
     line-height: 0;
 }
 
